--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ reducing emissions</br>
         <!-- Step 1 -->
         <div class="content">
             <div class="image reveal-left">
-                <img src="img1.jpg" alt="Renewable Energy Image" />
+                <img src="img1.jpeg" alt="Renewable Energy Image" />
             </div>
             <div class="details reveal-right">
                 <div class="topic">
@@ -208,7 +208,7 @@ reducing emissions</br>
         <!-- Step 2 -->
         <div class="content">
             <div class="image reveal-left">
-                <img src="img2.jpg" alt="Energy Efficiency Image" />
+                <img src="img2.jpeg" alt="Energy Efficiency Image" />
             </div>
             <div class="details reveal-right">
                 <div class="topic">
@@ -221,7 +221,7 @@ reducing emissions</br>
         <!-- Step 3 -->
         <div class="content">
             <div class="image reveal-left">
-                <img src="img3.jpg" alt="Electrify Transportation Image" />
+                <img src="img3.jpeg" alt="Electrify Transportation Image" />
             </div>
             <div class="details reveal-right">
                 <div class="topic">
@@ -247,7 +247,7 @@ reducing emissions</br>
         <!-- Step 5 -->
         <div class="content">
             <div class="image reveal-left">
-                <img src="img5.jpg" alt="Sustainable Land Use Image" />
+                <img src="img5.jpeg" alt="Sustainable Land Use Image" />
             </div>
             <div class="details reveal-right">
                 <div class="topic">
