--- a/index.html
+++ b/index.html
@@ -135,18 +135,11 @@
             <p class="text-3xl text-lg font-semibold">Country-wise Yearly GHG Emissions</p>
         </div>
         <div class="flex justify-center">
-            <iframe src="https://rakesh-ada.github.io/graph/" height="600" width="975" scrolling="no" title="Iframe Example"></iframe>
+            <iframe src="https://rakesh-ada.github.io/Chartmap/" height="600" width="975" scrolling="no" title="Iframe Example"></iframe>
         </div>
     </div>
 
-    <div class="reveal-left">
-        <div class="container mx-auto p-4 text-center text-white">
-            <p class="text-3xl text-lg font-semibold">CO2 Cycle</p>
-        </div>
-        <div class="flex justify-center">
-            <iframe src="https://rakesh-ada.github.io/pie-chart/" height="500" width="500" scrolling="no" title="Iframe Example"></iframe>
-        </div>
-    </div>          
+    
 </section>
         
 <section class="section section-dark bg-gray-900">
