--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <section class="img-section-2 bg-gray-900">
             <div class="reveal-right">
                 <div class="container mx-auto p-4 text-center text-white">
-                    <p class="text-3xl text-lg font-semibold">Something goes here!</p>
+                    <p class="text-3xl text-lg font-semibold"></p>
                 </div>
             </div>
         </section>
