--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ reducing emissions</br>
             </div>
             <div class="details reveal-right">
                 <div class="topic">
-                    <h4>1.Transition to Renewable Energy</h4>
+                    <h4>1.Move Towards Renewable Energy</h4>
                 </div>
                 <p>Shift from fossil fuels to renewable energy sources like solar, wind, and hydroelectric power.</p>
             </div>
