--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ reducing emissions</br>
         </section>
    <section class="section section-dark bg-gray-900">
     <div class="title reveal-left">
-        <h1 class="text-white text-2xl md:text-4xl font-extrabold mb-2">Individual Actions:</h1>
+        <h1 class="text-white text-2xl md:text-4xl font-extrabold mb-2">Individual Actions</h1>
         <hr>
         <p class="text-lg font-normal text-white">
             1. Reduce Energy Consumption: Turn off lights, electronics, and appliances when not in use to reduce energy consumption.<br>
@@ -271,7 +271,7 @@ reducing emissions</br>
     </div>   
 
     <div class="title reveal-left">
-        <h1 class="text-white text-2xl md:text-4xl font-extrabold mb-2">Call to Action:</h1>
+        <h1 class="text-white text-2xl md:text-4xl font-extrabold mb-2">Call to Action</h1>
         <hr>
         <p class="text-lg font-normal text-white">
             Join us in the fight against climate change by taking action today. Share our website with your friends and family to raise awareness about the importance of reducing greenhouse gas emissions. Together, we can make a difference and create a more sustainable future for all.
@@ -288,7 +288,7 @@ reducing emissions</br>
 </section>
 <section class="section section-dark bg-gray-900" id="ref">
     <div class="title reveal-left">
-        <h1 class="text-white text-2xl md:text-4xl font-extrabold mb-2">Data & Resources:</h1>
+        <h1 class="text-white text-2xl md:text-4xl font-extrabold mb-2">Data & Resources</h1>
         <hr>
         <p class="text-lg font-normal text-white">
             <p class="text-lg font-normal text-white">
