--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 </section>
 
 <section class="img-section-3">
-    <div class="reveal-right">
-        <iframe src="https://rakesh-ada.github.io/Slider/" height="600" width="975" scrolling="no" title="Iframe Example"></iframe>
+    <div class="reveal-right flex justify-center">
+        <iframe src="https://rakesh-ada.github.io/Slider/" height="600" width="1200" scrolling="no" title="Iframe Example"></iframe>
     </div>
 </section>
 
@@ -135,7 +135,7 @@
             <p class="text-3xl text-lg font-semibold">Country-wise Yearly GHG Emissions</p>
         </div>
         <div class="flex justify-center">
-            <iframe src="https://rakesh-ada.github.io/Chartmap/" height="600" width="975" scrolling="no" title="Iframe Example"></iframe>
+            <iframe src="https://rakesh-ada.github.io/Chartmap/" height="600" width="1200" scrolling="no" title="Iframe Example"></iframe>
         </div>
     </div>
 
